RbA Build/src/objects/Product_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Frame_Type__c</fullName>
        <description>Select the frame types that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the frame types that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Frame Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full-Frame</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat Sill Insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slope Sill Insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insert Frame</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Glass_Pattern_Control__c</fullName>
        <description>Controls whether Glass Pattern is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Glass Pattern is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Glass Pattern Control</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Glass_Pattern__c</fullName>
        <description>Select the glass pattern to make available for this product configuration.</description>
        <inlineHelpText>Select the glass pattern to make available for this product configuration.</inlineHelpText>
        <label>Glass Pattern</label>
        <picklist>
            <picklistValues>
                <fullName>No Pattern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obscure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cascade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reed</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Glass_Square_Ft_Max__c</fullName>
        <label>Glass Square Ft Max</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Glazing_Control__c</fullName>
        <description>Controls whether Glazing is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Glazing is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Glazing</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Glazing__c</fullName>
        <description>Select the glazing options to make available on the product configuration page for this product.</description>
        <inlineHelpText>Select the glazing options to make available on the product configuration page for this product.</inlineHelpText>
        <label>Glazing</label>
        <picklist>
            <picklistValues>
                <fullName>High Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Performance Obscure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Performance SmartSun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Performance SmartSun w/ HeatLock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Performance Sun</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Grille_Alignment_Control__c</fullName>
        <description>Controls whether Grille Alignment is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Grille Alignment is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Grille Alignment</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grille_Lites_Control__c</fullName>
        <description>Controls whether Grille Lites is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Grille Lites is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Grille Lites</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grille_Pattern_Control__c</fullName>
        <description>Controls whether Grille Pattern(Series) is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Grille Pattern(Series) is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Grille Pattern</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grille_Patterns__c</fullName>
        <description>Select the grille patterns that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the grille patterns that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Grille Patterns</label>
        <picklist>
            <picklistValues>
                <fullName>Colonial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prairie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modified Prairie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farmhouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renaissance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunburst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Hub Sunburst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gothic</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Grille_Style_Control__c</fullName>
        <description>Controls whether Grille Style(Type) is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Grille Style(Type) is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Grille Style</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grille_Style__c</fullName>
        <description>Select the options for grill style to make available for this product configuration.</description>
        <inlineHelpText>Select the options for grill style to make available for this product configuration.</inlineHelpText>
        <label>Grille Style</label>
        <picklist>
            <picklistValues>
                <fullName>No Grilles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grilles Between Glass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior Wood Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior Wood and GBG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Simulated Divided Light</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Divided Light</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Handing__c</fullName>
        <description>Select which handing options should be available for this product on the configuration page.</description>
        <inlineHelpText>Select which handing options should be available for this product on the configuration page.</inlineHelpText>
        <label>Handing</label>
        <picklist>
            <picklistValues>
                <fullName>Vented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stationary</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Hardware_Finish_Color_Control__c</fullName>
        <description>Controls whether Hardware Finish/Color is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Hardware Finish/Color is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Hardware Finish/Color</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hardware_Finish_Color__c</fullName>
        <description>Select the hardware finish/color that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the hardware finish/color that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Hardware Finish/Color</label>
        <picklist>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canvas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bright Brass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antique Brass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polished Chrome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brushed Chrome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil Rubbed Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distressed Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distressed Nickel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satin Nickel</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Hardware_Option_Control__c</fullName>
        <description>Controls whether Hardware Option is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Hardware Option is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Hardware Option</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hardware_Option__c</fullName>
        <description>Select the hardware options that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the hardware options that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Hardware Option</label>
        <picklist>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wide Opening</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Hardware_Style_Control__c</fullName>
        <description>Controls whether Hardware Style is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Hardware Style is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Hardware Style</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hardware_Style__c</fullName>
        <description>Select the hardware styles that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the hardware styles that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Hardware Style</label>
        <picklist>
            <picklistValues>
                <fullName>Traditional</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Height_Fraction_Control__c</fullName>
        <description>Controls whether Height Fraction is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Height Fraction is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Height Fraction</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Height_Inches_Control__c</fullName>
        <description>Controls whether Height Inches is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Height Inches is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Height Inches</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Height_to_Width_Cap_Height__c</fullName>
        <description>Height to Width Cap --- If the Height is greater than this number, then the width must be less than or equal to the Height to Width Cap (Width)</description>
        <inlineHelpText>Height to Width Cap --- If the Height is greater than this number, then the width must be less than or equal to the Height to Width Cap (Width)</inlineHelpText>
        <label>Height to Width Cap (Height)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Height_to_Width_Cap_Width__c</fullName>
        <description>Height to Width Cap --- If the Height to Width Cap (Width) is greater than that number, then the width must be less than or equal to this number.</description>
        <inlineHelpText>Height to Width Cap --- If the Height to Width Cap (Width) is greater than that number, then the width must be less than or equal to this number.</inlineHelpText>
        <label>Height to Width Cap (Width)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hubs_Control__c</fullName>
        <description>Controls whether Hubs are required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Hubs are required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Hubs Control</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Install_Track_Location__c</fullName>
        <description>Select the Install Track Locations that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the Install Track Locations that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Install Track Location</label>
        <picklist>
            <picklistValues>
                <fullName>Inside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Center</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Interior_Color_Control__c</fullName>
        <description>Controls whether Interior Color is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Interior Color is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Interior Color</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interior_Color__c</fullName>
        <description>The interior color of the product</description>
        <inlineHelpText>The interior color of the product</inlineHelpText>
        <label>Interior Color</label>
        <picklist>
            <picklistValues>
                <fullName>White</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Canvas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandtone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terratone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stainable Pine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Oak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Maple</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Interior_Grille_Color__c</fullName>
        <description>Select the Interior Grille Colors that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the Interior Grille Colors that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Interior Grille Color</label>
        <picklist>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandtone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terratone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canvas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocoa Bean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red Rock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Interior_Sash_Color__c</fullName>
        <description>Select the Interior Sash Colors that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the Interior Sash Colors that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Interior Sash Color</label>
        <picklist>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandtone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terratone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canvas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maple</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Interior_Trim_Control__c</fullName>
        <description>Controls whether Interior Trim is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Interior Trim is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Interior Trim</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interior_Trim__c</fullName>
        <description>Select the interior trim options that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the interior trim options that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Interior Trim</label>
        <picklist>
            <picklistValues>
                <fullName>Quarter-Round</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colonial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shoe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Jamb_Liner_Color__c</fullName>
        <description>Select the Jamb Liner Colors that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the Jamb Liner Colors that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Jamb Liner Color</label>
        <picklist>
            <picklistValues>
                <fullName>GG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Left_Leg_Fraction_Control__c</fullName>
        <description>Controls whether Left Leg Fraction is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Left Leg Fraction is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Left Leg Fraction</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Left_Leg_Inches_Control__c</fullName>
        <description>Controls whether Left Leg is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Left Leg is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Left Leg Inches</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lifts_Pulls_Control__c</fullName>
        <description>Controls whether Lifts/Pulls is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Lifts/Pulls is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Lifts/Pulls</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lifts_Pulls__c</fullName>
        <description>Select the number of lifts/pulls that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the number of lifts/pulls that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Lifts/Pulls</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Locks_Sash_Control__c</fullName>
        <description>Controls whether Locks Sash is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Locks Sash is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Locks/Sash</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Locks_Sash__c</fullName>
        <description>Select the number of locks/sash that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the number of locks/sash that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Locks/Sash</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1Y</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Max_Height__c</fullName>
        <description>The maximum height for the makeability exception rules.</description>
        <inlineHelpText>The maximum height for the makeability exception rules.</inlineHelpText>
        <label>Max Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Width__c</fullName>
        <description>The maximum width for the makeability exception rules.</description>
        <inlineHelpText>The maximum width for the makeability exception rules.</inlineHelpText>
        <label>Max Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>